removed stylings to the actual home, and fixing alignment and sizing to the featured cakes

--- a/client/src/pages/Home/home.scss
+++ b/client/src/pages/Home/home.scss
@@ -1,7 +1,6 @@
 @import "../../sass/main.scss";
 
-#homePage,
-.page {
-    background-image: url("../../imgs/svgs/about.svg");
-    padding: 1rem;
+#homePage {
+    display: flex;
+    flex-direction: column; 
 }
