--- a/client/src/sass/components/featComp.scss
+++ b/client/src/sass/components/featComp.scss
@@ -7,6 +7,7 @@
   justify-content: center;
   align-items: center;
   justify-self: center;
+  padding: 1rem;
 
   h2 {
     letter-spacing: 0.03em;
@@ -23,26 +24,39 @@
   }
 
   .featured-page-1 {
+    display: flex;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
-    display: flex;
+    width: 100%;
+    min-height: 420px;
+    margin: 1rem 0;
 
-    .featured-img {
-      display: inline-flex;
-      height: 400px;
-      width: 400px;
-      padding: 10px;
-      justify-content: space-evenly;
-      align-items: center;
-      flex-direction: row;
-      border-radius: 25px;
-      transition: transform 0.25s ease;
+    div {
+      margin: 0 auto;
+      width: 33%;
+      max-height: 340px; 
+      text-align: center;
 
-      // &:hover {
-      //   -webkit-transform: scale(1.5); /* or some other value */
-      //   transform: scale(1.5);
-      //   box-shadow: 0 0 0;
-      // }
+      .featured-img {
+        display: inline-flex;
+        // height: 100%; 
+        width: 100%;
+        max-width: 385px;
+        max-height: 385px;
+        padding: 1rem; 
+        justify-content: space-evenly;
+        align-items: center;
+        flex-direction: row;
+        border-radius: 25px;
+        transition: transform 0.25s ease;
+      }
+
+/* Making the image bigger when you hover over it. */
+        // &:hover {
+        //   -webkit-transform: scale(1.5); /* or some other value */
+        //   transform: scale(1.5);
+        //   box-shadow: 0 0 0;
     }
   }
 }
@@ -61,25 +75,25 @@ p {
     align-items: center;
     flex-direction: column;
 
-    .featured-page-1 {
-      .featured-img {
-        width: 250px;
-        height: 250px;
-      }
-    }
+    // .featured-page-1 {
+    //   .featured-img {
+    //     width: 250px;
+    //     height: 250px;
+    //   }
+    // }
   }
 }
 
 @media (max-width: 768px) {
-  .featured-page-1 {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
+  // .featured-page-1 {
+  //   display: flex;
+  //   align-items: center;
+  //   justify-content: center;
+  //   flex-direction: column;
 
-    .featured-img {
-      width: 300px;
-      height: 300px;
-    }
-  }
+  //   .featured-img {
+  //     width: 300px;
+  //     height: 300px;
+  //   }
+  // }
 }
