--- a/client/src/sass/main.scss
+++ b/client/src/sass/main.scss
@@ -83,6 +83,7 @@ h2 {
   padding: 2.5rem 2rem;
   min-height: 100vh;
   width: 100%;
+  background-image: url("../imgs/svgs/about.svg");
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
